--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,20 +13,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".UserDetails">
+        <activity android:name=".activities.UserDetails">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.chel.mobicashexam.MainActivity">
+                android:value="com.chel.mobicashexam.activities.MainActivity">
             </meta-data>
         </activity>
-        <activity android:name=".LogIn" />
-        <activity android:name=".Register">
+        <activity android:name=".activities.LogIn" />
+        <activity android:name=".activities.Register">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.chel.mobicashexam.MainActivity">
+                android:value="com.chel.mobicashexam.activities.MainActivity">
             </meta-data>
         </activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
